--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@your-scope/claude-skills",
-  "version": "0.1.0",
+  "name": "@slamb2k/mad-skills",
+  "version": "2.0.0",
   "description": "Claude Code skills collection with CI/CD and npx installer",
   "type": "module",
   "bin": {
