fix(ci): remove main push trigger and harden release pipeline
ci.yml: drop the push-to-main trigger so CI only runs on PRs; fix
the evals job condition and PR comment step to not reference the
now-removed push event.

release.yml: add lint step, add OPENROUTER_API_KEY alongside the
Anthropic key so evals can run via either provider, skip evals
gracefully when neither key is set, and add a build:manifests step
before publishing.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,10 +27,22 @@ jobs:
       - name: Validate
         run: npm run validate
 
+      - name: Lint
+        run: npm run lint
+
       - name: Run evals before release
         env:
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
-        run: npm run eval
+          OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
+        run: |
+          if [ -z "$ANTHROPIC_API_KEY" ] && [ -z "$OPENROUTER_API_KEY" ]; then
+            echo "::warning::No API key configured — skipping evals"
+            exit 0
+          fi
+          npm run eval
+
+      - name: Build manifests
+        run: npm run build:manifests
 
       - name: Verify version matches tag
         run: |
