--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,10 +7,6 @@ on:
       - "scripts/**"
       - "src/**"
       - "package.json"
-  push:
-    branches: [main]
-    paths:
-      - "skills/**"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -41,7 +37,7 @@ jobs:
     needs: validate
     runs-on: ubuntu-latest
     # Only run evals if we have the API key (skip for external PRs)
-    if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name == github.repository
+    if: github.event.pull_request.head.repo.full_name == github.repository
     steps:
       - uses: actions/checkout@v4
 
@@ -72,7 +68,7 @@ jobs:
           retention-days: 30
 
       - name: Comment eval results on PR
-        if: github.event_name == 'pull_request' && always()
+        if: always()
         uses: actions/github-script@v7
         with:
           script: |
