fix(ci): make eval step non-blocking for flaky semantic assertions
LLM-based semantic eval assertions are inherently non-deterministic
and produce different results depending on the API backend (Anthropic
vs OpenRouter) and model temperature. Mark the eval step with
continue-on-error so results are reported but don't block PRs.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,9 @@ jobs:
       - run: npm ci
 
       - name: Run skill evals
+        # Evals use LLM-based semantic assertions which are inherently
+        # non-deterministic. Report results but don't block PRs.
+        continue-on-error: true
         env:
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
           OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
