chore(npm): add repository field to package.json
Links the npm registry entry to the GitHub source so npm displays
the repository URL on the package page and tools can resolve it.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "bin": {
     "claude-skills": "./src/cli.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/slamb2k/mad-skills"
+  },
   "files": [
     "src/",
     "skills/"
